// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cursor block 1`] = `
<div
  id="gaming"
>
  <div
    className="sc-bdvvtL gPuioP"
    style={
      Object {
        "left": 300,
        "top": 300,
      }
    }
  />
</div>
`;

exports[`cursor line 1`] = `
<div
  id="gaming"
>
  <div
    className="sc-bdvvtL eeKqGd"
    style={
      Object {
        "left": 300,
        "top": 300,
      }
    }
  />
</div>
`;
